Android Money Management App V1

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,9 @@
         android:theme="@style/Theme.AriaBank"
         tools:targetApi="31">
         <activity
+            android:name=".TransferActivity"
+            android:exported="false" />
+        <activity
             android:name=".InvestmentActivity"
             android:exported="false" />
         <activity
