--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,8 +16,12 @@
         android:theme="@style/Theme.AriaBank"
         tools:targetApi="31">
         <activity
-            android:name=".TransactionActivity"
+            android:name=".StatsActivity"
             android:exported="false" />
+        <activity
+            android:name=".TransactionActivity"
+            android:exported="false"
+            android:windowSoftInputMode="adjustPan|adjustResize" />
         <activity
             android:name=".LoanActivity"
             android:exported="false" />
